# nexora

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  TRADEMARK.md  config.example.toml
.github/workflows/: ci.yml
assets/: dev.nexora.Nexora.desktop
docs/: safe-share-virtual-workspace-prototype.md
docs/wayfinder/nexora-v1/: intake-decisions.md  map.md
docs/wayfinder/nexora-v1/research/: existing-invisible-overlay-products.md  local-ai-stack.md  provider-capabilities.md  safe-share-wayland.md  secure-session-storage.md
docs/wayfinder/nexora-v1/resolutions/: session-privacy-domain-model.md
docs/wayfinder/nexora-v1/tickets/: choose-local-model-experience.md  choose-provider-orchestration.md  choose-safe-share-design.md  choose-secure-session-storage.md  finalize-v1-specification.md  local-ai-runtime-stack.md  prototype-primary-ui.md  provider-capability-contract.md  safe-share-wayland-architecture.md  secure-session-storage-constraints.md  session-privacy-domain-model.md
src/: app.rs  config.rs  conversation.rs  hidden.rs  lib.rs  main.rs  meeting.rs  screenshot.rs  vision.rs  whisper.rs
src/providers/: anthropic.rs  mod.rs  openai.rs  sse.rs
src/relay/: http.rs  mod.rs  search.rs
src/ui/: mod.rs  overlay.rs  style.css
