[package]
name = "nexora"
version = "0.1.0"
edition = "2024"
description = "A featherweight AI overlay assistant for Linux (Wayland-first)"
license = "AGPL-3.0-only"
repository = "https://github.com/MiguelLopesDel/nexora"
readme = "README.md"
keywords = ["ai", "assistant", "wayland", "overlay", "gtk4"]
categories = ["gui"]

[dependencies]
anyhow = "1.0.103"
ashpd = { version = "0.13.12", default-features = false, features = ["documents", "screenshot", "tokio"] }
async-channel = "2.5.0"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.32"
gtk4 = { version = "0.11.4", features = ["v4_10"] }
gtk4-layer-shell = "0.8.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "stream", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "1.1.3"
toml_edit = "0.25.13"

# Everyday release build: fast to compile, small enough. Thin LTO across 16
# codegen units parallelizes well and links in seconds with mold.
[profile.release]
lto = "thin"
codegen-units = 16
strip = true
opt-level = 2

# Faster iteration: line-only debuginfo instead of full DWARF.
[profile.dev]
debug = "line-tables-only"

# The absolute-smallest artifact for tagged releases / packaging:
#   cargo build --profile dist
# Fat LTO + one codegen unit squeeze the binary but take longer to build.
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
